Algunos fixes de contenido y un fix en el estilo para la version mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ li.logo {
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
     position: absolute;
-    top: 40%;
+    top: 10%;
   }
   #index-banner .section {
     top: 10%;
